--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "lint": "eslint --ext .jsx,.js src/"
   },
   "dependencies": {
+    "@types/react-dom": "^16.9.9",
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-config": "^5.0.1",
+    "@types/react-router-dom": "^5.1.6",
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "lodash.clonedeep": "^4.5.0",
     "prop-types": "^15.7.2",
+    "razzle-plugin-typescript": "^3.3.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
@@ -29,6 +35,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@types/webpack-env": "^1.15.3",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -42,6 +49,7 @@
     "normalize.css": "^8.0.1",
     "razzle": "^3.1.3",
     "razzle-dev-utils": "^3.1.3",
-    "razzle-plugin-scss": "^3.1.5"
+    "razzle-plugin-scss": "^3.1.5",
+    "typescript": "^4.0.5"
   }
 }
