--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
+# Logs
 logs
 *.log
 npm-debug.log*
-.DS_Store
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-coverage
 node_modules
-build
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
