--- a/package.json
+++ b/package.json
@@ -1,51 +1,59 @@
 {
-  "name": "divar-starter-kit",
-  "version": "1.0.0",
+  "name": "elite-js",
+  "private": true,
+  "version": "2.0.0",
   "license": "MIT",
-  "description": "SSR-ready react boilerplate 🚀.",
+  "description": "Hybrid react boilerplate 🚀.",
   "author": "Divar Front-End Chapter",
   "scripts": {
-    "start": "razzle start",
-    "build": "razzle build",
-    "test": "razzle test --env=jsdom",
-    "start:prod": "NODE_ENV=production node build/server.js",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "lint": "yarn lint:script && yarn lint:style",
-    "lint:script": "eslint --ext .jsx,.js src/",
-    "lint:style": "stylelint 'src/**/*.scss'"
+    "lint:script": "eslint src --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:style": "stylelint 'src/**/*.scss'",
+    "test": "jest",
+    "format": "prettier-eslint --write \"src/**/*.{js,jsx}\" \"build/**/*.js\" \"scripts/**/*.js\" \"config/**/*.js\"",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "express": "^4.17.1",
-    "lodash.clonedeep": "^4.5.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-redux": "^7.1.3",
-    "react-router": "^5.1.2",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "stylelint": "^13.7.2",
-    "stylelint-config-standard": "^20.0.0"
+    "@tanstack/react-query": "^4.29.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-import-resolver-webpack": "^0.12.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^4.0.7",
-    "handlebars": "^4.7.0",
-    "handlebars-loader": "^1.7.1",
-    "normalize.css": "^8.0.1",
-    "razzle": "^3.1.3",
-    "razzle-dev-utils": "^3.1.3",
-    "razzle-plugin-scss": "^3.1.5"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.2",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "@vitejs/plugin-legacy": "^4.0.4",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^8.41.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "prettier": "^2.8.8",
+    "prettier-eslint-cli": "^7.1.0",
+    "sass": "^1.62.1",
+    "stylelint": "^15.6.2",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-scss": "^5.0.0",
+    "terser": "^5.17.6",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.9",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
