--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "description": "Hybrid react boilerplate 🚀.",
   "author": "Divar Front-End Chapter",
   "scripts": {
-    "dev:server": "node server.mjs --dev",
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "nodemon server/index.mjs",
+    "build": "vite build --outDir dist/client",
+    "serve": "NODE_ENV=production node server/index.mjs",
+    "debug": "node --inspect-brk server/index.mjs",
     "lint": "yarn lint:script && yarn lint:style",
     "lint:script": "eslint src --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:style": "stylelint 'src/**/*.scss'",
@@ -17,14 +18,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.12",
-    "fastify": "^4.17.0",
+    "express": "^4.18.2",
+    "glob": "^10.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
-    "@fastify/vite": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -57,7 +57,8 @@
     "swc": "^1.0.11",
     "terser": "^5.17.6",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "nodemon": "^2.0.22",
+    "vite": "^4.3.9"
   }
 }
