--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "description": "Hybrid react boilerplate 🚀.",
   "author": "Divar Front-End Chapter",
   "scripts": {
-    "dev": "vite",
+    "dev": "nodemon server.mjs",
     "build": "tsc && vite build",
     "lint": "yarn lint:script && yarn lint:style",
     "lint:script": "eslint src --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:style": "stylelint 'src/**/*.scss'",
     "test": "jest",
     "format": "prettier-eslint --write \"src/**/*.{js,jsx}\" \"build/**/*.js\" \"scripts/**/*.js\" \"config/**/*.js\"",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "NODE_ENV=production node server.mjs",
+    "debug": "node --inspect-brk server"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.12",
@@ -33,6 +35,7 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-legacy": "^4.0.4",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "compression": "^1.7.4",
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -44,9 +47,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-testing-library": "^5.11.0",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "prettier-eslint-cli": "^7.1.0",
     "sass": "^1.62.1",
+    "serve-static": "^1.15.0",
     "stylelint": "^15.6.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard-scss": "^9.0.0",
