--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Divar Front-End Chapter",
   "scripts": {
     "dev": "nodemon server/index.mjs",
-    "build": "vite build --outDir dist/client",
+    "build": "vite build --outDir dist",
     "serve": "NODE_ENV=production node server/index.mjs",
     "debug": "node --inspect-brk server/index.mjs",
     "lint": "yarn lint:script && yarn lint:style",
@@ -18,6 +18,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.12",
     "express": "^4.18.2",
     "glob": "^10.2.6",
     "react": "^18.2.0",
@@ -39,26 +40,28 @@
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-testing-library": "^5.11.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "prettier-eslint-cli": "^7.1.0",
     "sass": "^1.62.1",
+    "serve-static": "^1.15.0",
     "stylelint": "^15.6.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-scss": "^5.0.0",
-    "swc": "^1.0.11",
     "terser": "^5.17.6",
     "typescript": "^5.0.2",
-    "vite-plugin-eslint": "^1.8.1",
-    "nodemon": "^2.0.22",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
