--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "description": "Hybrid react boilerplate 🚀.",
   "author": "Divar Front-End Chapter",
   "scripts": {
-    "dev:server": "node server.mjs --dev",
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "nodemon server/index.mjs",
+    "build": "vite build --outDir dist",
+    "serve": "NODE_ENV=production node server/index.mjs",
+    "debug": "node --inspect-brk server/index.mjs",
     "lint": "yarn lint:script && yarn lint:style",
     "lint:script": "eslint src --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:style": "stylelint 'src/**/*.scss'",
@@ -18,13 +19,13 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.12",
-    "fastify": "^4.17.0",
+    "express": "^4.18.2",
+    "glob": "^10.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
-    "@fastify/vite": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -39,22 +40,25 @@
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-testing-library": "^5.11.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "prettier-eslint-cli": "^7.1.0",
     "sass": "^1.62.1",
+    "serve-static": "^1.15.0",
     "stylelint": "^15.6.2",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-scss": "^5.0.0",
-    "swc": "^1.0.11",
     "terser": "^5.17.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
